# socially

./: .dockerignore  .gitignore  Dockerfile  README.md  conftest.py  docker-compose.yml  example.env.db  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt
.github/workflows/: tests.yml
accounts/: adapter.py  admin.py  forms.py  models.py  serializers.py  urls.py  views.py  viewsets.py
accounts/api/: urls.py
accounts/migrations/: 0001_initial.py
accounts/tests/: factories.py  fixtures.py  test_api.py  test_models.py
api/: permissions.py  urls.py  utils.py  views.py
mixins/: compare_images_mixin.py  remove_file_mixin.py  resize_image_mixin.py
nginx/: Dockerfile  nginx.conf
posts/: admin.py  decorators.py  forms.py  helpers.py  models.py  permissions.py  serializers.py  urls.py  views.py  viewsets.py
posts/migrations/: 0001_initial.py  0002_auto_20210904_1207.py  0002_post_parent.py  0003_alter_post_body.py  0003_post_author.py  0004_alter_post_body.py  0004_alter_post_liked.py  0005_alter_post_picture.py  0006_alter_post_body.py  0007_alter_post_author.py  0008_auto_20220310_1920.py
posts/tests/: factories.py  test_api.py  test_models.py
profiles/: admin.py  forms.py  mixins.py  models.py  serializers.py  signals.py  urls.py  views.py  viewsets.py
profiles/migrations/: 0001_initial.py  0002_alter_profile_bio.py  0003_auto_20220305_1952.py  0004_auto_20220309_2104.py  0005_rename_following_profile_followers.py  0006_alter_profile_followers.py
profiles/tests/: factories.py  test_api.py  test_models.py
socially/: asgi.py  example.env  settings.py  urls.py  wsgi.py
socially-web/: package-lock.json  package.json  vite.config.js
socially-web/src/: App.jsx  main.jsx  useFetchData.js  utils.js
static/: main.js  postsScript.js  postsScriptLoggedIn.js  styles.scss  utils.js
templates/: 403.html  404.html  base.html  follow_btn.html  messages.html  post_form.html  posts.html
(+60 files in other folders)
